--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "Semestre 01/get_next_line_"]
 	path = Semestre 01/get_next_line_
 	url = vogsphere@vogsphere.42.fr:algo-1-001/2013/par-1-1/getnextline/adebray
+[submodule "Semestre 01/ftls_"]
+	path = Semestre 01/ftls_
+	url = vogsphere@vogsphere.42.fr:algo-1-001/2013/par-1-1/ftls/adebray
+[submodule "Semestre 01/printf_"]
+	path = Semestre 01/printf_
+	url = vogsphere@vogsphere.42.fr:algo-1-001/2013/par-1-1/printf/adebray
