--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Semestre 01/printf_"]
 	path = Semestre 01/printf_
 	url = vogsphere@vogsphere.42.fr:algo-1-001/2013/par-1-1/printf/adebray
+[submodule "idle"]
+	path = idle
+	url = https://arnaud_debray@bitbucket.org/arnaud_debray/idle.git
