--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = vogsphere@vogsphere.42.fr:algo-1-001/2013/par-1-1/printf/adebray
 [submodule "idle"]
 	path = idle
-	url = https://arnaud_debray@bitbucket.org/arnaud_debray/idle.git
+	url = https://arnaud_debray@bitbucket.org/arnaud_debray/idle42.git
