--- a/idle/Makefile
+++ b/idle/Makefile
@@ -38,7 +38,7 @@ HEADFLAG = -I $(HEADDIR) -I $(FTHEADDIR)
 
 all: $(NAME)
 
-$(NAME): libft $(LIBNAME) clean
+$(NAME): libft $(LIBNAME)
 	$(CC) $(CCFLAGS) -o $(NAME) $(HEADFLAG) $(LIBFLAG) main.c
 
 $(LIBNAME): $(OBJ)
