--- a/Experimental Area/ft_printf/Makefile
+++ b/Experimental Area/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: adebray <adebray@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2013/12/16 20:25:00 by adebray           #+#    #+#              #
-#    Updated: 2013/12/21 16:14:10 by adebray          ###   ########.fr        #
+#    Updated: 2013/12/21 18:29:21 by adebray          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 NAME = ft_printf
@@ -25,7 +25,8 @@ SRC = ./src/ft_printf.c \
 		./src/ft_strlen.c \
 		./src/ft_putnbr.c \
 		./src/ft_octal.c \
-		./src/ft_hexa.c
+		./src/ft_hexa.c \
+		./src/ft_sheum_hexa.c
 
 OBJ = $(subst .c,.o,$(SRC))
 
@@ -48,8 +49,8 @@ $(LIBNAME): $(OBJ)
 libft:
 	cd src/libft/; make
 
-clean: $(OBJ)
-	rm -f $<
+clean:
+	rm -f $(OBJ)
 
 %.o: %.c
 	$(CC) $(CCFLAGS) $(HEADFLAG) -o $@ -c $<
