--- a/.gitmodules
+++ b/.gitmodules
@@ -8,8 +8,11 @@
 	path = Semestre 01/ftls_
 	url = vogsphere@vogsphere.42.fr:unix-1-001/2013/par-1-1/ftls/adebray
 [submodule "Semestre 01/printf_"]
-	path = Semestre 01/printf_
+	path = Semestre 01/ft_printf_
 	url = vogsphere@vogsphere.42.fr:algo-1-001/2013/par-1-1/printf/adebray
+[submodule "Semestre 01/fdf_"]
+	path = Semestre 01/fdf_
+	url = vogsphere@vogsphere.42.fr:infog-1-001/2013/par-1-1/fdf/adebray
 [submodule "idle"]
 	path = idle
 	url = https://arnaud_debray@bitbucket.org/arnaud_debray/idle42.git
