--- a/Experimental Area/push_swap/Makefile
+++ b/Experimental Area/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: adebray <adebray@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2013/12/16 20:25:00 by adebray           #+#    #+#              #
-#    Updated: 2013/12/23 07:41:12 by adebray          ###   ########.fr        #
+#    Updated: 2013/12/24 21:03:53 by adebray          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 NAME = push_swap
@@ -14,9 +14,18 @@ LIBNAME = ./src/libpushswap.a
 SRCDIR = ./src/
 HEADDIR = ./inc/
 
-SRC = ./src/ft_putendl_fd.c \
+SRC = ./src/ft_initial.c \
+		./src/ft_putendl_fd.c \
 		./src/ft_putchar_fd.c \
-		./src/ft_printargv.c
+		./src/ft_printargv.c \
+		./src/ft_issomething.c \
+		./src/ft_interactive.c \
+		./src/ft_print.c \
+		./src/ft_swap.c \
+		./src/ft_push.c \
+		./src/ft_reverse.c \
+		./src/ft_rreverse.c \
+		./src/gnl.c
 
 
 OBJ = $(subst .c,.o,$(SRC))
