--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,9 @@
 [submodule "Semestre 01/fdf_"]
 	path = Semestre 01/fdf_
 	url = vogsphere@vogsphere.42.fr:infog-1-001/2013/par-1-1/fdf/adebray
+[submodule "Semestre 01/push_swap_"]
+        path = Semestre 01/push_swap_
+        url = vogsphere@vogsphere.42.fr:algo-1-001/2013/par-1-1/pushswap/adebray
 [submodule "idle"]
 	path = idle
 	url = https://arnaud_debray@bitbucket.org/arnaud_debray/idle42.git
