--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Semestre 01/push_swap_"]
 	path = Semestre 01/push_swap_
 	url = vogsphere@vogsphere.42.fr:algo-1-001/2013/par-1-1/pushswap/adebray
+[submodule "Semestre 01/filler_"]
+	path = Semestre 01/filler_
+	url = vogsphere@vogsphere.42.fr:algo-1-001/2013/par-1-1/filler/adebray2
